adjusted flexbox properties for contact section to try fixing a responsiveness issue when viewed on mobile devices.

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -13,7 +13,6 @@
   }
 
   .profile-text {
-    /* padding: 16px; */
     margin: 25px 0 0 0;
   }
 }
@@ -23,13 +22,7 @@
     height: auto;
   }
 
-  .cards-container {
-    /* flex-wrap: wrap; */
-    /* height: auto; */
-  }
-
   .projects-container {
-    /* padding-top: 15px; */
     height: auto;
   }
 }
@@ -40,9 +33,9 @@
   }
   
   .contact-container {
-    height: auto;
+    height: 100%;
   }
-  
+
   .image-overlay {
     opacity: 1;
   }
