--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,6 @@ section {
   align-items: center;
   justify-content: center;
   height: 100%;
-  
 }
 
 .about-text {
@@ -308,10 +307,10 @@ section {
 /* CONTACT */
 
 #contact {
-    background-color: rgb(243, 240, 240);
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
+  background-color: rgb(243, 240, 240);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-container {
@@ -320,6 +319,7 @@ section {
   justify-content: center;
   align-items: center;
   height: 100%;
+  flex-wrap: wrap; /*TESTING THIS - REMOVE IF BROKEN*/
 }
 
 .contact-text {
@@ -328,7 +328,7 @@ section {
 }
 
 .contact-text h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .contact-icons {
@@ -348,7 +348,7 @@ section {
   position: relative;
   justify-content: center;
   align-items: center;
-  
+  flex-wrap: wrap; /*TESTING THIS - REMOVE IF BROKEN*/
 }
 
 .image-overlay {
